...
                app:hintTextColor="#8E9AA6"
                app:layout_constraintTop_toBottomOf="@id/carNumberLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="מספר טלפון"
                    android:inputType="phone"
                    android:textColor="#001F3F"
                    android:textColorHint="#8E9AA6" />
...
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/service10kDateLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
...
